GNOME Bugzilla – Bug 784539
vulkan: Fails to build when only one WSI enabled
Last modified: 2017-07-10 14:43:56 UTC
Created attachment 354910 [details] [review] vkdisplay: Use ifdef for platform specific defines Build fails in ext/vulkan/xcb and ext/vulkan/wayland when: * building from tarball * building out-of-tree * Only one WSI integration (xcb or wayland) is enabled by configure.ac This is because vkconfig.h from source directory gets used instead of the generated one. Also, vkdisplay.c fails to build in general if only one WSI integration is enabled. Attaching a couple of patches. Maybe I should have tried to change vkconfig.h to always generate (and not ship in tarball) but current patch just fixes the issue following the current design.
Created attachment 354911 [details] [review] vulkan: Use the generated version of vkconfig.h
commit 97b0085c489a475ac498c6bddf81131a5197d75d (HEAD -> master) Author: Jussi Kukkonen <jussi.kukkonen@intel.com> Date: Wed Jul 5 11:07:05 2017 +0300 vulkan: Use the generated version of vkconfig.h Build fails in ext/vulkan/xcb and ext/vulkan/wayland when: * building from tarball * building out-of-tree * Only one WSI integration (xcb or wayland) is enabled by configure.ac This is because vkconfig.h from source directory gets used instead of the generated one. Add the correct build directory to "-I". Use angle bracket include in vkapi.h so that it actually looks in the include search path instead of defaulting to the same (source tree) directory. https://bugzilla.gnome.org/show_bug.cgi?id=784539 commit 9c6d36984f11edf7a9dacca96488a64c6478444b Author: Jussi Kukkonen <jussi.kukkonen@intel.com> Date: Wed Jul 5 11:00:42 2017 +0300 vkdisplay: Use ifdef for platform specific defines VK_KHR_*_SURFACE_EXTENSION_NAME are only available when corresponding WSI is enabled. https://bugzilla.gnome.org/show_bug.cgi?id=784539