ext/vulkan/vkdisplay.c
@@ -449,11 +449,15 @@ gst_vulkan_display_type_to_extension_string (GstVulkanDisplayType type)
   if (type == GST_VULKAN_DISPLAY_TYPE_NONE)
     return NULL;
 
+#if GST_VULKAN_HAVE_WINDOW_XCB
   if (type & GST_VULKAN_DISPLAY_TYPE_XCB)
     return VK_KHR_XCB_SURFACE_EXTENSION_NAME;
+#endif
 
+#if GST_VULKAN_HAVE_WINDOW_WAYLAND
   if (type & GST_VULKAN_DISPLAY_TYPE_WAYLAND)
     return VK_KHR_WAYLAND_SURFACE_EXTENSION_NAME;
+#endif
 
   return NULL;
 }
